--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "massa"
   ],
   "dependencies": {
+    "@noble/secp256k1": "1.5.5",
     "assemblyscript": "^0.19.23",
     "bn.js": "^5.2.0",
     "bs58check": "^2.1.2",
@@ -28,9 +29,9 @@
     "etherscan-api": "^10.0.5",
     "node-ts": "^5.1.1",
     "secp256k1": "^4.0.3",
-    "@noble/secp256k1": "1.5.5",
     "uuidv4": "^6.0.0",
-    "varint": "^6.0.0"
+    "varint": "^6.0.0",
+    "xhr2": "^0.2.1"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
