--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -r ts-node/register test/**/*.spec.ts",
     "test-client": "ts-node ./test/unit/client.ts"
   },
-  "author": "Evgeni Pirianov",
-  "license": "ISC",
+  "author": "Massa Labs <info@massa.net>",
+  "contributors": ["Evgeni Pirianov", "Yvan Sraka <yvan@sraka.xyz>"],
+  "license": "MIT",
   "repository": "https://github.com/massalabs/massa-web3",
   "private": false,
   "keywords": [
