--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "node-ts": "^5.1.1",
     "secp256k1": "^4.0.3",
     "uuidv4": "^6.0.0",
-    "varint": "^6.0.0"
+    "varint": "^6.0.0",
+    "json-as": "^0.2.6",
+    "massa-sc-std": "2.0.0",
+    "visitor-as": "^0.6.0"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
