--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "test-client": "ts-node ./test/unit/client.ts"
   },
   "author": "Massa Labs <info@massa.net>",
-  "contributors": ["Evgeni Pirianov", "Yvan Sraka <yvan@sraka.xyz>"],
+  "contributors": [
+    "Evgeni Pirianov",
+    "Yvan Sraka <yvan@sraka.xyz>"
+  ],
   "license": "MIT",
   "repository": "https://github.com/massalabs/massa-web3",
   "private": false,
@@ -31,19 +34,19 @@
     "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
     "etherscan-api": "^10.0.5",
-    "node-ts": "^5.1.1",
+    "json-as": "^0.2.6",
+    "massa-sc-std": "2.0.0",
+    "node-ts": "^5.1.2",
     "secp256k1": "^4.0.3",
     "uuidv4": "^6.0.0",
     "varint": "^6.0.0",
-    "json-as": "^0.2.6",
-    "massa-sc-std": "2.0.0",
     "visitor-as": "^0.6.0"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^14.0.5",
+    "@types/node": "^17.0.23",
     "@types/secp256k1": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
@@ -60,9 +63,9 @@
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0",
     "prettier-standard": "^16.3.0",
-    "ts-node": "^8.10.2",
-    "tslib": "^2.0.0",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.3"
+    "ts-node": "^10.7.0",
+    "tslib": "^2.3.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.6.2"
   }
 }
