--- a/package.json
+++ b/package.json
@@ -22,47 +22,46 @@
   "keywords": [
     "web3",
     "js",
+    "ts",
     "sdk",
     "massa"
   ],
   "dependencies": {
     "@noble/secp256k1": "1.5.5",
     "assemblyscript": "^0.19.23",
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
     "bn.js": "^5.2.0",
     "bs58check": "^2.1.2",
     "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
-    "etherscan-api": "^10.0.5",
     "json-as": "^0.2.6",
-    "massa-sc-std": "2.0.0",
+    "massa-sc-std": "^2.0.0",
     "node-ts": "^5.1.2",
     "secp256k1": "^4.0.3",
-    "uuidv4": "^6.0.0",
+    "uuidv4": "^6.2.12",
     "varint": "^6.0.0",
-    "visitor-as": "^0.6.0"
+    "visitor-as": "^0.8.0"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
-    "@types/chai": "^4.2.11",
-    "@types/mocha": "^7.0.2",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.0.1",
     "@types/node": "^17.0.23",
     "@types/secp256k1": "^4.0.3",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "chai": "^4.2.0",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "lint-staged": "^10.2.2",
-    "mocha": "^8.0.1",
-    "prettier": "^2.0.5",
-    "prettier-eslint": "^11.0.0",
-    "prettier-standard": "^16.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "chai": "^4.3.6",
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.0.0",
+    "lint-staged": "^12.3.7",
+    "mocha": "^9.2.2",
+    "prettier": "^2.6.1",
+    "prettier-eslint": "^13.0.0",
+    "prettier-standard": "^16.4.1",
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
     "tslint": "^6.1.3",
