--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bs58check": "^2.1.2",
     "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
+    "handlebars": "^4.7.7",
     "json-as": "^0.2.6",
     "massa-sc-std": "^2.0.0",
     "node-ts": "^5.1.2",
