--- a/package.json
+++ b/package.json
@@ -35,14 +35,10 @@
     "bs58check": "^2.1.2",
     "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
-    "handlebars": "^4.7.7",
-    "json-as": "^0.2.6",
-    "massa-sc-std": "^2.0.0",
     "node-ts": "^5.1.2",
     "secp256k1": "^4.0.3",
     "uuidv4": "^6.2.12",
-    "varint": "^6.0.0",
-    "visitor-as": "^0.8.0"
+    "varint": "^6.0.0"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
