--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "bs58check": "^2.1.2",
     "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
+    "madge": "^5.0.1",
+    "massa-sc-utils": "^2.1.0",
     "node-ts": "^5.1.2",
     "secp256k1": "^4.0.3",
     "uuidv4": "^6.2.12",
-    "varint": "^6.0.0",
-    "massa-sc-utils": "^2.1.0"
+    "varint": "^6.0.0"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
@@ -50,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "chai": "^4.3.6",
+    "dpdm": "^3.9.0",
     "eslint": "^7.12.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^16.0.3",
