added new functions, enhanced README, polishing

--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "up": "npm update",
     "check": "npm outdated",
     "upgrade": "npm run up && npm run check && npm run build",
-    "build": "rimraf dist/* && tsc -d",
+    "build-package": "rimraf dist/* && tsc -d",
+    "build-bundle": "npm run gen-bundle && npm run uglify-bundle",
+    "publish": "npm publish --access public",
+    "update-version-major": "npm version major",
+    "update-version-minor": "npm version minor",
     "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -r ts-node/register test/**/*.spec.ts",
     "test-unit-client": "ts-node ./test/unit/client.ts",
     "test-sc-example": "ts-node ./examples/sc.ts",
-    "fix-lint": "tslint -c tslint.json '**/*.ts' --fix"
+    "fix-lint": "tslint -c tslint.json '**/*.ts' --fix",
+    "gen-bundle": "browserify dist/index.js --standalone massa > bundle.js",
+    "uglify-bundle": "uglifyjs --compress --mangle -- bundle.js > bundle-minified.js"
   },
   "author": "Massa Labs <info@massa.net>",
   "contributors": [
@@ -33,12 +39,13 @@
     "axios": "^0.26.1",
     "base58check": "^2.0.0",
     "bn.js": "^5.2.0",
+    "browserify": "^17.0.0",
     "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
-    "madge": "^5.0.1",
     "massa-sc-utils": "^2.1.0",
     "node-ts": "^5.1.2",
     "secp256k1": "^4.0.3",
+    "uglify-js": "^3.15.4",
     "uuidv4": "^6.2.12",
     "varint": "^6.0.0"
   },
