--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
   ],
   "dependencies": {
     "@noble/secp256k1": "1.5.5",
+    "aes-password": "^1.0.5",
     "axios": "^0.26.1",
     "base58check": "^2.0.0",
+    "bip39": "^3.0.4",
     "bn.js": "^5.2.0",
     "browserify": "^17.0.0",
     "buffer": "^6.0.3",
