--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "massa"
   ],
   "dependencies": {
-    "@noble/secp256k1": "1.5.5",
+    "@noble/secp256k1": "github:BatiGencho/noble-secp256k1#feature/entropy-32-bytes",
     "aes-password": "^1.0.5",
     "axios": "^0.26.1",
     "base58check": "^2.0.0",
@@ -46,7 +46,6 @@
     "create-hash": "^1.2.0",
     "massa-sc-utils": "^2.1.0",
     "node-ts": "^5.1.2",
-    "secp256k1": "^4.0.3",
     "uglify-js": "^3.15.4",
     "varint": "^6.0.0"
   },
