--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
   ],
   "dependencies": {
     "@noble/secp256k1": "github:BatiGencho/noble-secp256k1#feature/entropy-32-bytes",
-    "aes-password": "^1.0.5",
     "axios": "^0.26.1",
     "base58check": "^2.0.0",
     "bip39": "^3.0.4",
@@ -44,6 +43,7 @@
     "browserify": "^17.0.0",
     "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
+    "crypto-js": "^4.1.1",
     "massa-sc-utils": "^2.1.0",
     "node-ts": "^5.1.2",
     "uglify-js": "^3.15.4",
