--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "check": "npm outdated",
     "upgrade": "npm run up && npm run check && npm run build",
     "build-package": "rimraf dist/* && tsc -d",
-    "build-bundle": "npm run gen-bundle && npm run uglify-bundle-optimum",
+    "build-bundle": "npm run gen-bundle && npm run uglify-bundle-optimize",
+    "build": "npm run build-package && npm run build-bundle",
     "update-version-major": "npm version major",
     "update-version-minor": "npm version minor",
+    "update-version-patch": "npm version patch",
     "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -r ts-node/register test/**/*.spec.ts",
-    "test-unit-client": "ts-node ./test/unit/client.ts",
-    "test-sc-example": "ts-node ./examples/sc.ts",
+    "test-smart-contract-example": "ts-node ./examples/smartContract.ts",
+    "test-vault-example": "ts-node ./examples/vault.ts",
     "fix-lint": "tslint -c tslint.json '**/*.ts' --fix",
     "gen-bundle": "browserify dist/index.js --standalone massa > bundle.js",
     "uglify-bundle": "uglifyjs --compress --mangle -- bundle.js > bundle.min.js",
-    "uglify-bundle-optimum": "node minify.js"
+    "uglify-bundle-optimize": "node minify.js"
   },
   "author": "Massa Labs <info@massa.net>",
   "contributors": [
@@ -40,13 +42,10 @@
     "base58check": "^2.0.0",
     "bip39": "^3.0.4",
     "bn.js": "^5.2.0",
-    "browserify": "^17.0.0",
     "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
     "crypto-js": "^4.1.1",
     "massa-sc-utils": "^2.1.0",
-    "node-ts": "^5.1.2",
-    "uglify-js": "^3.15.4",
     "varint": "^6.0.0"
   },
   "devDependencies": {
@@ -72,6 +71,9 @@
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "browserify": "^17.0.0",
+    "uglify-js": "^3.15.4",
+    "node-ts": "^5.1.2"
   }
 }
