--- a/package.json
+++ b/package.json
@@ -50,8 +50,12 @@
     "sdk",
     "massa"
   ],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@noble/secp256k1": "github:BatiGencho/noble-secp256k1#feature/entropy-32-bytes",
+    "@massalabs/massa-sc-utils": "^2.1.1",
     "axios": "^0.26.1",
     "base58check": "^2.0.0",
     "bip39": "^3.0.4",
@@ -59,7 +63,6 @@
     "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
     "crypto-js": "^4.1.1",
-    "@massalabs/massa-sc-utils": "^2.1.1",
     "varint": "^6.0.0"
   },
   "devDependencies": {
