--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "update-version-minor": "npm version minor",
     "update-version-patch": "npm version patch",
     "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -r ts-node/register test/**/*.spec.ts",
-    "test-smart-contract-example": "ts-node ./examples/smartContract.ts",
-    "test-vault-example": "ts-node ./examples/vault.ts",
+    "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
+    "test-vault-example": "ts-node ./examples/vault/index.ts",
     "fix-lint": "tslint -c tslint.json '**/*.ts' --fix"
   },
   "author": "Massa Labs <info@massa.net>",
@@ -87,6 +87,8 @@
     "tslint": "^6.1.3",
     "typescript": "^4.6.2",
     "uglify-js": "^3.15.4",
-    "uglifyify": "^5.0.2"
+    "uglifyify": "^5.0.2",
+    "ora": "^5.1.0",
+    "chalk": "^4.1.0"
   }
 }
