--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   ],
   "dependencies": {
     "@massalabs/massa-sc-utils": "^2.1.1",
-    "@noble/secp256k1": "github:BatiGencho/noble-secp256k1#feature/entropy-32-bytes",
+    "@noble/ed25519": "^1.6.1",
     "axios": "^0.26.1",
     "base58check": "^2.0.0",
     "bip39": "^3.0.4",
@@ -70,6 +70,7 @@
     "@typescript-eslint/parser": "^5.16.0",
     "browserify": "^17.0.0",
     "chai": "^4.3.6",
+    "chalk": "^4.1.0",
     "eslint": "^7.12.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^16.0.3",
@@ -79,6 +80,7 @@
     "lint-staged": "^12.3.7",
     "mocha": "^9.2.2",
     "node-ts": "^5.1.2",
+    "ora": "^5.1.0",
     "prettier": "^2.6.1",
     "prettier-eslint": "^13.0.0",
     "prettier-standard": "^15.0.1",
@@ -87,8 +89,6 @@
     "tslint": "^6.1.3",
     "typescript": "^4.6.2",
     "uglify-js": "^3.15.4",
-    "uglifyify": "^5.0.2",
-    "ora": "^5.1.0",
-    "chalk": "^4.1.0"
+    "uglifyify": "^5.0.2"
   }
 }
