--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "bundle.min.js"
   ],
   "dependencies": {
-    "@massalabs/massa-sc-utils": "^2.1.1",
     "@noble/ed25519": "^1.6.1",
+    "@noble/hashes": "^1.1.2",
     "axios": "^0.26.1",
     "base58check": "^2.0.0",
     "bip39": "^3.0.4",
