--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "tslint": "^6.1.3",
     "typescript": "^4.6.2",
     "uglify-js": "^3.15.4",
-    "uglifyify": "^5.0.2"
+    "uglifyify": "^5.0.2",
+    "@massalabs/massa-sc-utils": "^2.1.6"
   }
 }
