--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "bn.js": "^5.2.0",
     "buffer": "^6.0.3",
     "crypto-js": "^4.1.1",
+    "js-base64": "^3.7.3",
     "varint": "^6.0.0"
   },
   "devDependencies": {
+    "@massalabs/massa-sc-utils": "^2.1.6",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.1",
@@ -88,7 +90,6 @@
     "tslint": "^6.1.3",
     "typescript": "^4.8.4",
     "uglify-js": "^3.15.4",
-    "uglifyify": "^5.0.2",
-    "@massalabs/massa-sc-utils": "^2.1.6"
+    "uglifyify": "^5.0.2"
   }
 }
