--- a/examples/smartContracts/contracts/package.json
+++ b/examples/smartContracts/contracts/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {
     "@massalabs/as": "^1.0.0",
-    "@massalabs/massa-as-sdk": "file:../../../../massa-as-sdk",
+    "@massalabs/massa-as-sdk": "1.1.2-dev.20221125122030",
     "assemblyscript": "^0.21.2",
     "json-as": "^0.4.9",
     "npm-run-all": "^4.1.5",
