--- a/examples/smartContracts/contracts/package.json
+++ b/examples/smartContracts/contracts/package.json
@@ -6,11 +6,9 @@
     "build": "run-s build:1 build:2"
   },
   "devDependencies": {
-    "@massalabs/as": "^1.0.0",
-    "@massalabs/massa-as-sdk": "1.1.2-dev.20221125122030",
-    "assemblyscript": "^0.21.2",
-    "json-as": "^0.4.9",
-    "npm-run-all": "^4.1.5",
-    "visitor-as": "^0.10.2"
+    "@massalabs/as-types": "^0.0.2-dev",
+    "@massalabs/massa-as-sdk": "^2.0.1-dev",
+    "assemblyscript": "^0.25.0",
+    "npm-run-all": "^4.1.5"
   }
 }
