--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "ts-node": "^10.7.0",
     "tslib": "^2.4.0",
     "tslint": "^6.1.3",
+    "typedoc": "^0.23.24",
     "typescript": "^4.8.4",
     "uglify-js": "^3.15.4",
     "uglifyify": "^5.0.2"
