--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "@types/ws": "^8.5.3",
     "axios": "^0.26.1",
     "base58check": "^2.0.0",
+    "bignumber.js": "^9.1.1",
     "bip39": "^3.0.4",
-    "bn.js": "^5.2.0",
     "buffer": "^6.0.3",
     "crypto-js": "^4.1.1",
     "esmify": "^2.1.1",
@@ -67,7 +67,6 @@
     "ws": "^8.11.0"
   },
   "devDependencies": {
-    "@massalabs/massa-sc-utils": "^2.1.10",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.1",
