--- a/package.json
+++ b/package.json
@@ -1,105 +1,113 @@
 {
-  "name": "@massalabs/massa-web3",
-  "version": "1.14.0",
-  "description": "massa's web3 sdk client",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "up": "npm update",
-    "check": "npm outdated",
-    "upgrade": "npm run up && npm run check && npm run build",
-    "build-package": "rimraf dist/* && tsc -d -p ./tsconfig.json",
-    "build-bundle": "npm run gen-bundle && npm run uglify-bundle-optimize",
-    "gen-bundle": "browserify dist/index.js -p esmify --standalone massa > bundle.js",
-    "uglify-bundle-optimize": "browserify dist/index.js -p esmify -i node-fetch -i http -i https -o bundle.min.js && browserify dist/index.js -p esmify -i node-fetch -g uglifyify --compress --mangle -o bundle.min.js",
-    "build": "npm run build-package && npm run build-bundle",
-    "update-version-major": "npm version major",
-    "update-version-minor": "npm version minor",
-    "update-version-patch": "npm version patch",
-    "test": "mocha -r ts-node/register test/**/*.spec.ts",
-    "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
-    "test-vault-example": "ts-node ./examples/vault/index.ts",
-    "test-ws-blocks": "ts-node ./examples/websockets/ws-blocks.ts",
-    "test-ws-block-headers": "ts-node ./examples/websockets/ws-block-headers.ts",
-    "test-ws-filled-blocks": "ts-node ./examples/websockets/ws-filled-blocks.ts",
-    "fix-lint": "tslint -c tslint.json '**/*.ts' --fix"
-  },
-  "author": "Massa Labs <info@massa.net>",
-  "contributors": [
-    "Evgeni Pirianov",
-    "Yvan Sraka <yvan@sraka.xyz>"
-  ],
-  "license": "(MIT AND Apache-2.0)",
-  "homepage": "https://github.com/massalabs/massa-web3",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/massalabs/massa-web3"
-  },
-  "private": false,
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "keywords": [
-    "web3",
-    "ts",
-    "sdk",
-    "massa"
-  ],
-  "files": [
-    "dist",
-    "bundle.js",
-    "bundle.min.js"
-  ],
-  "dependencies": {
-    "@noble/ed25519": "^1.6.1",
-    "@noble/hashes": "^1.1.2",
-    "@types/ws": "^8.5.3",
-    "axios": "^0.26.1",
-    "base58check": "^2.0.0",
-    "bignumber.js": "^9.1.1",
-    "bip39": "^3.0.4",
-    "buffer": "^6.0.3",
-    "crypto-js": "^4.1.1",
-    "esmify": "^2.1.1",
-    "js-base64": "^3.7.3",
-    "varint": "^6.0.0",
-    "ws": "^8.11.0"
-  },
-  "devDependencies": {
-    "@types/bn.js": "^5.1.0",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.1",
-    "@types/node": "^17.0.23",
-    "@types/secp256k1": "^4.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "browserify": "^17.0.0",
-    "chai": "^4.3.6",
-    "chalk": "^4.1.0",
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.0.0",
-    "lint-staged": "^12.3.7",
-    "mocha": "^9.2.2",
-    "node-ts": "^5.1.2",
-    "ora": "^5.1.0",
-    "prettier": "^2.6.1",
-    "prettier-eslint": "^13.0.0",
-    "prettier-standard": "^15.0.1",
-    "ts-node": "^10.7.0",
-    "tslib": "^2.4.0",
-    "tslint": "^6.1.3",
-    "typedoc": "^0.23.24",
-    "typescript": "^4.8.4",
-    "uglify-js": "^3.15.4",
-    "uglifyify": "^5.0.2"
-  },
-  "optionalDependencies": {
-    "bufferutil": "^4.0.7",
-    "utf-8-validate": "^5.0.10"
-  }
+    "name": "@massalabs/massa-web3",
+    "version": "1.14.0",
+    "description": "massa's web3 sdk client",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "scripts": {
+        "up": "npm update",
+        "check": "npm outdated",
+        "upgrade": "npm run up && npm run check && npm run build",
+        "build-package": "rimraf dist/* && tsc -d -p ./tsconfig.json",
+        "build-bundle": "npm run gen-bundle && npm run uglify-bundle-optimize",
+        "gen-bundle": "browserify dist/index.js -p esmify --standalone massa > bundle.js",
+        "uglify-bundle-optimize": "browserify dist/index.js -p esmify -i node-fetch -i http -i https -o bundle.min.js && browserify dist/index.js -p esmify -i node-fetch -g uglifyify --compress --mangle -o bundle.min.js",
+        "build": "npm run build-package && npm run build-bundle",
+        "update-version-major": "npm version major",
+        "update-version-minor": "npm version minor",
+        "update-version-patch": "npm version patch",
+        "test": "mocha -r ts-node/register test/**/*.spec.ts",
+        "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
+        "test-ws-blocks": "ts-node ./examples/websockets/ws-blocks.ts",
+        "test-ws-block-headers": "ts-node ./examples/websockets/ws-block-headers.ts",
+        "test-ws-filled-blocks": "ts-node ./examples/websockets/ws-filled-blocks.ts",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "prettier": "prettier --check .",
+        "prettier:fix": "prettier --write .",
+        "fmt": "npm run prettier:fix && npm run lint:fix",
+        "fmt:check": "npm run prettier && npm run lint",
+        "doc": "typedoc src/index.ts --name massa-web3 --out docs/documentation/html --tsconfig tsconfig.json"
+    },
+    "author": "Massa Labs <info@massa.net>",
+    "contributors": [
+        "Evgeni Pirianov",
+        "Yvan Sraka <yvan@sraka.xyz>"
+    ],
+    "license": "(MIT AND Apache-2.0)",
+    "homepage": "https://github.com/massalabs/massa-web3",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/massalabs/massa-web3"
+    },
+    "private": false,
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org/"
+    },
+    "keywords": [
+        "web3",
+        "ts",
+        "sdk",
+        "massa"
+    ],
+    "files": [
+        "dist",
+        "bundle.js",
+        "bundle.min.js"
+    ],
+    "dependencies": {
+        "@noble/ed25519": "^1.7.3",
+        "@noble/hashes": "^1.2.0",
+        "@types/ws": "^8.5.4",
+        "axios": "^1.3.3",
+        "base58check": "^2.0.0",
+        "bignumber.js": "^9.1.1",
+        "bip39": "^3.0.4",
+        "buffer": "^6.0.3",
+        "crypto-js": "^4.1.1",
+        "esmify": "^2.1.1",
+        "js-base64": "^3.7.5",
+        "varint": "^6.0.0",
+        "ws": "^8.12.1"
+    },
+    "devDependencies": {
+        "@massalabs/eslint-config": "^0.0.9",
+        "@types/bn.js": "^5.1.1",
+        "@types/chai": "^4.3.4",
+        "@types/mocha": "^10.0.1",
+        "@types/node": "^18.13.0",
+        "@types/secp256k1": "^4.0.3",
+        "@typescript-eslint/eslint-plugin": "^5.52.0",
+        "@typescript-eslint/parser": "^5.52.0",
+        "browserify": "^17.0.0",
+        "chai": "^4.3.7",
+        "chalk": "^4.1.0",
+        "eslint": "^8.34.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.25.5",
+        "eslint-plugin-jsdoc": "^40.0.0",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "lint-staged": "^13.1.2",
+        "mocha": "^10.2.0",
+        "node-ts": "^5.1.2",
+        "ora": "^5.1.0",
+        "prettier": "^2.8.4",
+        "prettier-eslint": "^15.0.1",
+        "prettier-standard": "^16.4.1",
+        "ts-node": "^10.9.1",
+        "tslib": "^2.5.0",
+        "tslint": "^6.1.3",
+        "typedoc": "^0.23.25",
+        "typescript": "^4.9.5",
+        "uglify-js": "^3.17.4",
+        "uglifyify": "^5.0.2",
+        "husky": "^8.0.3"
+    },
+    "optionalDependencies": {
+        "bufferutil": "^4.0.7",
+        "utf-8-validate": "^6.0.2"
+    }
 }
