--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     },
     "devDependencies": {
         "@massalabs/eslint-config": "^0.0.9",
+        "@massalabs/prettier-config-as": "^0.0.2",
         "@types/bn.js": "^5.1.1",
         "@types/chai": "^4.3.4",
         "@types/mocha": "^10.0.1",
@@ -90,6 +91,7 @@
         "eslint-plugin-jsdoc": "^40.0.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^6.1.1",
+        "husky": "^8.0.3",
         "lint-staged": "^13.1.2",
         "mocha": "^10.2.0",
         "node-ts": "^5.1.2",
@@ -103,11 +105,11 @@
         "typedoc": "^0.23.25",
         "typescript": "^4.9.5",
         "uglify-js": "^3.17.4",
-        "uglifyify": "^5.0.2",
-        "husky": "^8.0.3"
+        "uglifyify": "^5.0.2"
     },
     "optionalDependencies": {
         "bufferutil": "^4.0.7",
         "utf-8-validate": "^6.0.2"
-    }
+    },
+    "prettier": "@massalabs/prettier-config-as"
 }
