--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,14 +9,7 @@ on:
 
 jobs:
     test:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: 18
-            - run: npm ci
-            - run: npm test
+        uses: ./.github/workflows/node.js.yml
 
     publish-npm:
         needs: test
@@ -30,24 +23,12 @@ jobs:
             - run: |
                   npm ci
                   npm run build
-                  npm publish
+                  npm publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{secrets.npm_token}}
-
-    build:
-        needs: test
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: 18
-                  registry-url: https://registry.npmjs.org/
-            - run: |
-                  npm ci
-                  npm run build
             - uses: softprops/action-gh-release@v1
               with:
-                  files: |
-                      bundle.js
-                      bundle.min.js
+                files: |
+                    bundle.js
+                    bundle.min.js
+
