--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "update-version-patch": "npm version patch",
         "test": "mocha -r ts-node/register test/**/*.spec.ts",
         "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
+        "test-wallet": "ts-node ./examples/wallet/index.ts",
         "test-ws-blocks": "ts-node ./examples/websockets/ws-blocks.ts",
         "test-ws-block-headers": "ts-node ./examples/websockets/ws-block-headers.ts",
         "test-ws-filled-blocks": "ts-node ./examples/websockets/ws-filled-blocks.ts",
