--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "build-package": "rimraf dist/* && tsc -d -p ./tsconfig.json",
         "build-bundle": "npm run gen-bundle && npm run uglify-bundle-optimize",
         "gen-bundle": "browserify dist/index.js -p esmify --standalone massa > bundle.js",
+        "gen-bundle2": "browserify dist/index.js -p [ tsify --target es2020 ] --standalone massa > bundle.js",
         "uglify-bundle-optimize": "browserify dist/index.js -p esmify -i node-fetch -i http -i https -o bundle.min.js && browserify dist/index.js -p esmify -i node-fetch -g uglifyify --compress --mangle -o bundle.min.js",
+        "uglify-bundle-optimize2": "terser bundle.js --compress --mangle --output bundle.min.js",
         "build": "npm run build-package && npm run build-bundle",
         "update-version-major": "npm version major",
         "update-version-minor": "npm version minor",
@@ -67,11 +69,11 @@
         "bip39": "^3.0.4",
         "buffer": "^6.0.3",
         "crypto-js": "^4.1.1",
+        "dotenv": "^16.0.3",
         "esmify": "^2.1.1",
         "js-base64": "^3.7.5",
         "varint": "^6.0.0",
-        "ws": "^8.12.1",
-        "dotenv": "^16.0.3"
+        "ws": "^8.12.1"
     },
     "devDependencies": {
         "@massalabs/eslint-config": "^0.0.9",
