--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "experimentalResolver": true
     },
     "compilerOptions": {
-        "target": "es6",
+        "target": "ES2020",
         "module": "commonjs",
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
