updated proto file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,7 +53,7 @@
         "esnext.asynciterable"
     ],
     "files": ["./node_modules/@types/node/index.d.ts"],
-    "include": ["./src/**/*.ts"],
+    "include": ["./src/**/*.ts", "./src/**/*.js"],
     "exclude": [
         "./node_modules/**/*",
         "typings/browser.d.ts",
