--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
         "fmt": "npm run prettier:fix && npm run lint:fix",
         "fmt:check": "npm run prettier && npm run lint",
         "doc": "typedoc src/index.ts --name massa-web3 --out docs/documentation/html --tsconfig tsconfig.json",
-        "gen-js-grpc": "grpc_tools_node_protoc --js_out=import_style=commonjs,binary:./src/ --grpc_out=grpc_js:./src --plugin=protoc-gen-grpc=`which grpc_tools_node_protoc_plugin` ./protos/*.proto",
-        "gen-ts-grpc": "grpc_tools_node_protoc --plugin=protoc-gen-ts=`which protoc-gen-ts` --ts_out=grpc_js:./src/ ./protos/*.proto"
+        "gen-js-grpc": "grpc_tools_node_protoc --js_out=import_style=commonjs,binary:./src/ --grpc_out=grpc_js:./src --plugin=protoc-gen-grpc=`which grpc_tools_node_protoc_plugin` ./protos/**/*.proto",
+        "gen-ts-grpc": "grpc_tools_node_protoc --plugin=protoc-gen-ts=`which protoc-gen-ts` --ts_out=grpc_js:./src/ -I=./protos  ./protos/*.proto ./protos/massa/api/v1/*.proto ./protos/third-party/google/api/*.proto ./protos/third-party/google/rpc/*.proto"
     },
     "author": "Massa Labs <info@massa.net>",
     "contributors": [
