--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
         "esmify": "^2.1.1",
         "google-protobuf": "^3.21.2",
         "grpc-health-check": "^1.8.0",
-        "grpc-tools": "^1.12.4",
+        "grpc-web": "^1.4.2",
         "js-base64": "^3.7.5",
         "uuid": "^9.0.0",
         "varint": "^6.0.0",
@@ -102,7 +102,6 @@
         "eslint-plugin-jsdoc": "^40.0.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^6.1.1",
-        "grpc_tools_node_protoc_ts": "^5.3.3",
         "grpc-tools": "^1.12.4",
         "husky": "^8.0.3",
         "lint-staged": "^13.1.2",
