--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -2,8 +2,8 @@ version: v1
 managed:
   enabled: true
 plugins:
-  - remote: buf.build/stephenh/plugins/ts-proto
+  - plugin: buf.build/grpc/node
     out: src/protos
-    opt:
-      - outputServices=...
-      - useExactTypes=...
+  # dependencies
+  - plugin: buf.build/protocolbuffers/js
+    out: src/protos
