added jest and adjusted tests to work with jest

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "update-version-major": "npm version major",
         "update-version-minor": "npm version minor",
         "update-version-patch": "npm version patch",
-        "test": "mocha -r ts-node/register test/**/*.spec.ts",
+        "test": "jest",
         "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
         "test-wallet": "ts-node ./examples/wallet/index.ts",
         "test-ws-blocks": "ts-node ./examples/websockets/ws-blocks.ts",
@@ -69,6 +69,7 @@
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
         "esmify": "^2.1.1",
+        "jest-environment-jsdom": "^29.5.0",
         "js-base64": "^3.7.5",
         "varint": "^6.0.0",
         "ws": "^8.12.1"
@@ -77,14 +78,13 @@
         "@massalabs/eslint-config": "^0.0.9",
         "@massalabs/prettier-config-as": "^0.0.2",
         "@types/bn.js": "^5.1.1",
-        "@types/chai": "^4.3.4",
-        "@types/mocha": "^10.0.1",
+        "@types/jest": "^29.5.1",
         "@types/node": "^18.13.0",
         "@types/secp256k1": "^4.0.3",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "@typescript-eslint/parser": "^5.52.0",
+        "babel-jest": "^29.5.0",
         "browserify": "^17.0.0",
-        "chai": "^4.3.7",
         "chalk": "^4.1.0",
         "eslint": "^8.34.0",
         "eslint-config-airbnb-base": "^15.0.0",
@@ -94,13 +94,15 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^6.1.1",
         "husky": "^8.0.3",
+        "jest": "^29.5.0",
+        "jsdom": "^21.1.1",
         "lint-staged": "^13.1.2",
-        "mocha": "^10.2.0",
         "node-ts": "^5.1.2",
         "ora": "^5.1.0",
         "prettier": "^2.8.4",
         "prettier-eslint": "^15.0.1",
         "prettier-standard": "^16.4.1",
+        "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
         "tslib": "^2.5.0",
         "tslint": "^6.1.3",
