--- a/.github/workflows/deploy-test-smartContract.yml
+++ b/.github/workflows/deploy-test-smartContract.yml
@@ -39,6 +39,6 @@ jobs:
           fi
         env:
           JSON_RPC_URL_PUBLIC: ${{ secrets.JSON_RPC_URL_PUBLIC }}
-          JSON_RPC_URL_PRIVATE: ${{ secrets.JSON_RPC_URL_PRIVATE }}
+          JSON_RPC_URL_PRIVATE: ${{ secrets.JSON_RPC_URL_PUBLIC }}
           DEPLOYER_PRIVATE_KEY: ${{ secrets.WALLET_PRIVATE_KEY }}
           RECEIVER_PRIVATE_KEY: ${{ secrets.WALLET_PRIVATE_KEY }}
