--- a/.github/workflows/deploy-test-smartContract.yml
+++ b/.github/workflows/deploy-test-smartContract.yml
@@ -43,3 +43,4 @@ jobs:
           JSON_RPC_URL_PRIVATE: ${{ secrets.JSON_RPC_URL_PUBLIC }}
 
           DEPLOYER_PRIVATE_KEY: ${{ secrets.WALLET_PRIVATE_KEY }}
+          RECEIVER_PRIVATE_KEY: ${{ secrets.WALLET_PRIVATE_KEY }}
