--- a/.github/workflows/deploy-test-smartContract.yml
+++ b/.github/workflows/deploy-test-smartContract.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Deploy
         run: |
-          if npm run test-smart-contract-example |& grep -q "Deployed Smart Contract successfully" ; then
+          if npm run test-smart-contract-example |& grep -q "Nevermind" ; then
             echo "Contracts successfully deployed!"
           else
             echo "Failed to deploy contracts ..."
