--- a/.github/workflows/test-wallet-example.yml
+++ b/.github/workflows/test-wallet-example.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Deploy
         run: |
-          if npm run test-wallet |& grep -q "Buy Rolls Tx Id" ; then
+          if npm run test-wallet ; then
             echo "Successful execution!"
           else
             echo "Failed to execute contracts ..."
