--- a/package.json
+++ b/package.json
@@ -59,11 +59,11 @@
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
         "@rollup/plugin-commonjs": "^24.1.0",
-        "@types/superagent": "^4.1.17",
         "base58check": "^2.0.0",
         "bignumber.js": "^9.1.1",
         "bip39": "^3.0.4",
         "buffer": "^6.0.3",
+        "cross-fetch": "^3.1.5",
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
         "esmify": "^2.1.1",
@@ -71,8 +71,7 @@
         "jest-environment-jsdom": "^29.5.0",
         "js-base64": "^3.7.5",
         "rollup-plugin-json": "4.0.0",
-        "rollup-plugin-node-polyfills": "^0.2.1",
-        "superagent": "^8.0.9"
+        "rollup-plugin-node-polyfills": "^0.2.1"
     },
     "devDependencies": {
         "@massalabs/eslint-config": "^0.0.9",
