added ts defs bundler command

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
         "check": "npm outdated",
         "upgrade": "npm run up && npm run check && npm run build",
         "build-package": "rimraf dist/* && tsc -d -p ./tsconfig.json",
-        "build-bundle": "npm run gen-bundle && npm run uglify-bundle-optimize",
-        "gen-bundle": "browserify dist/index.js -p esmify --standalone massa > bundle.js",
-        "uglify-bundle-optimize": "browserify dist/index.js -p esmify -i node-fetch -i http -i https -o bundle.min.js && browserify dist/index.js -p esmify -i node-fetch -g uglifyify --compress --mangle -o bundle.min.js",
+        "build-bundle": "npm run gen-bundle && npm run uglify-bundle && npm run gen-bundle-defs",
+        "gen-bundle": "browserify dist/index.js -p esmify -s MassaWeb3 -o dist/massa-web3.js",
+        "gen-bundle-defs": "dts-bundle-generator -o dist/types/massa-web3.d.ts --umd-module-name MassaWeb3  --project ./tsconfig.json --verbose -- dist/massa-web3.js",
+        "uglify-bundle": "uglifyjs ./dist/massa-web3.js -o ./dist/massa-web3.min.js",
         "build": "npm run build-package && npm run build-bundle",
         "update-version-major": "npm version major",
         "update-version-minor": "npm version minor",
@@ -68,6 +69,7 @@
         "buffer": "^6.0.3",
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
+        "dts-gen": "^0.6.1",
         "esmify": "^2.1.1",
         "jest-environment-jsdom": "^29.5.0",
         "js-base64": "^3.7.5",
@@ -86,6 +88,7 @@
         "babel-jest": "^29.5.0",
         "browserify": "^17.0.0",
         "chalk": "^4.1.0",
+        "dts-bundle-generator": "^8.0.1",
         "eslint": "^8.34.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-standard": "^17.0.0",
@@ -104,6 +107,7 @@
         "prettier-standard": "^16.4.1",
         "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
+        "tsify": "^5.0.4",
         "tslib": "^2.5.0",
         "tslint": "^6.1.3",
         "typedoc": "^0.23.25",
