--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
         "check": "npm outdated",
         "upgrade": "npm run up && npm run check && npm run build",
         "build-package": "rimraf dist/* && tsc -d -p ./tsconfig.json",
-        "build-bundle": "npm run gen-bundle && npm run uglify-bundle-optimize",
-        "gen-bundle": "browserify dist/index.js -p esmify --standalone massa > bundle.js",
-        "uglify-bundle-optimize": "browserify dist/index.js -p esmify -i node-fetch -i http -i https -o bundle.min.js && browserify dist/index.js -p esmify -i node-fetch -g uglifyify --compress --mangle -o bundle.min.js",
+        "build-bundle": "webpack",
         "build": "npm run build-package && npm run build-bundle",
         "update-version-major": "npm version major",
         "update-version-minor": "npm version minor",
@@ -66,6 +64,7 @@
         "bignumber.js": "^9.1.1",
         "bip39": "^3.0.4",
         "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.0",
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
         "esmify": "^2.1.1",
@@ -102,14 +101,19 @@
         "prettier": "^2.8.4",
         "prettier-eslint": "^15.0.1",
         "prettier-standard": "^16.4.1",
+        "stream-browserify": "^3.0.0",
         "ts-jest": "^29.1.0",
+        "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
         "tslib": "^2.5.0",
         "tslint": "^6.1.3",
         "typedoc": "^0.23.25",
         "typescript": "^4.9.5",
         "uglify-js": "^3.17.4",
-        "uglifyify": "^5.0.2"
+        "uglifyify": "^5.0.2",
+        "webpack": "^5.82.0",
+        "webpack-cli": "^5.1.1",
+        "webpack-dev-server": "^4.15.0"
     },
     "optionalDependencies": {
         "bufferutil": "^4.0.7",
